--- a/scss/06-components/_btn.scss
+++ b/scss/06-components/_btn.scss
@@ -27,4 +27,20 @@
             background-color: darken($color-green, 10%);
         }
     }
+
+    &--circle {
+        width: 10rem;
+        height: 10rem;
+        border-radius: 50%;
+        line-height: 10rem;
+        padding: 0;
+    }
+
+    &--outline {
+        background-color: transparent;
+        border: 1px solid $color-white;
+        &:hover {
+            background-color: rgba(255, 255, 255, .3);
+        }
+    }
 }
