--- a/scss/01-settings/_variables.scss
+++ b/scss/01-settings/_variables.scss
@@ -1,14 +1,14 @@
 $color1: #eff0f3;
-$color2: #74030e;
-$color3: #132601;
+$color2: #3f3f3f;
+$color3: #000000;
 
 $color-white: $color1;
-$color-red: $color2;
+$color-grey: $color2;
 $color-green: $color3;
 
-$color-bg-section: #504533;
+$color-bg-section: #707070;
 
-$color-bg-footer: #201b13;
+$color-bg-footer: #4e4e4e;
 
 $font-base: 10px;
 
