--- a/scss/04-elements/_body.scss
+++ b/scss/04-elements/_body.scss
@@ -1,6 +1,6 @@
-@import url('https://fonts.googleapis.com/css2?family=Italianno&family=Roboto&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@200&display=swap');
 
 body {
-    font-family: 'Italianno', cursive;
+    font-family: 'Nunito Sans', sans-serif;
     // font-family: 'Roboto', sans-serif;
 }
