--- a/scss/06-components/_nav.scss
+++ b/scss/06-components/_nav.scss
@@ -17,9 +17,9 @@
         border-radius: .4rem;
         display: block;
         text-align: center;
-        transition-duration: .5s;
+        transition-duration: .6s;
         &:hover {
-            background-color: $color-red;
+            background-color: $color-grey;
         }
     }
 
