--- a/scss/07-templates/_site-footer.scss
+++ b/scss/07-templates/_site-footer.scss
@@ -5,5 +5,8 @@
     background-color: $color-bg-footer;
     height: 40vh;
     color: $color-white;
-
+    &__links {
+        font-weight: bold;
+        
+    }
 }
