--- a/scss/05-objects/_row.scss
+++ b/scss/05-objects/_row.scss
@@ -4,10 +4,13 @@
 .row {
 
     display: flex;
+    justify-content: space-between;
     flex-direction: column;
     flex-wrap: wrap;
     margin: 0;
     padding: 1.5 * $grid-base;
+    // border-top: 1px solid black;
+    // border-radius: 1%;
 
     @include medium {
         flex-direction: row;
