--- a/scss/06-components/_btn.scss
+++ b/scss/06-components/_btn.scss
@@ -14,10 +14,10 @@
     // text-decoration: none;
     transition-duration: .5s;
 
-    &--red {
-        background-color: $color-red;
+    &--grey {
+        background-color: $color-grey;
         &:hover {
-            background-color: darken($color-red, 10%);
+            background-color: darken($color-grey, 10%);
         }
     }
     
@@ -29,10 +29,10 @@
     }
 
     &--circle {
-        width: 10rem;
-        height: 10rem;
-        border-radius: 50%;
-        line-height: 10rem;
+        width: 12rem;
+        height: 8rem;
+        border-radius: 25%;
+        line-height: 8rem;
         padding: 0;
     }
 
