--- a/scss/06-components/_heading.scss
+++ b/scss/06-components/_heading.scss
@@ -20,6 +20,11 @@
         font-size: 5rem;
         width: 100%;
         text-align: center;
+        font-weight: bold;
+        &__about {
+            
+            
+        }
     }
 
 }
