--- a/scss/07-templates/_site-header.scss
+++ b/scss/07-templates/_site-header.scss
@@ -4,7 +4,7 @@
 
     position: relative;
     height: 100vh;
-    background: url('../assets/img/bg_header.jpeg') center/cover fixed;
+    background: url('../assets/img/codewise1.jpg') center/cover fixed;
 
     &__blackout {
 
