--- a/scss/07-templates/_site-section.scss
+++ b/scss/07-templates/_site-section.scss
@@ -2,11 +2,32 @@
 
 .site-section {
 
-    min-height: 70vh;
+    min-height: 40vh;
     padding-top: 3rem;
 
     &--bg-color {
         background-color: $color-bg-section;
     }
-
+    &__start {
+        height: 50vh;
+    }
+    &__menu {
+        height: 50vh;
+        background: url('../assets/img/bg_menu.jpg')center/cover fixed;
+        
+    }
+    &__contact {
+        background: url('../assets/img/bg_menu.jpg') center/cover fixed;
+        width: 100%;
+        height: 100%;
+        color: #fff;
+    }
+    &__logo {
+        position: relative;
+        float: right;
+        bottom: 10%;
+        right: 8%;
+    }
 }
+
+
